# visilib

./: .gitignore  CMakeLists.txt  README.md  configure  generateProject.bat  generateProject.sh
.github/workflows/: c-cpp.yml
cmake/modules/: FindCGAL.cmake  FindEmbree.cmake  FindLEDA.cmake
cmake/modules/win64/: FindGLUT.cmake
demo/: CMakeLists.txt  demo_debug_visualisation_gl.cpp  demo_debug_visualisation_gl.h  demo_helper.cpp  demo_helper.h  demo_main.cpp  demo_viewer_glut.h
doc/: doxygen.cfg
doc/html/: annotated.html  class_visilib_demo_main-members.html  class_visilib_demo_main.html  classes.html  classvisilib_1_1_geometry_a_a_b_b-members.html  classvisilib_1_1_geometry_a_a_b_b.html  classvisilib_1_1_geometry_convex_hull-members.html  classvisilib_1_1_geometry_convex_hull.html  classvisilib_1_1_geometry_convex_hull_builder-members.html  classvisilib_1_1_geometry_convex_hull_builder.html  classvisilib_1_1_geometry_convex_polygon-members.html  classvisilib_1_1_geometry_convex_polygon.html  classvisilib_1_1_geometry_embree_scene-members.html  classvisilib_1_1_geometry_embree_scene.html  classvisilib_1_1_geometry_mesh-members.html  classvisilib_1_1_geometry_mesh.html  classvisilib_1_1_geometry_mesh_face-members.html  classvisilib_1_1_geometry_mesh_face.html  classvisilib_1_1_geometry_occluder_set-members.html  classvisilib_1_1_geometry_occluder_set.html  classvisilib_1_1_geometry_ray-members.html  classvisilib_1_1_geometry_ray.html  classvisilib_1_1_geometry_scene-members.html  classvisilib_1_1_geometry_scene.html  classvisilib_1_1_geometry_scene_data-members.html  classvisilib_1_1_geometry_scene_data.html  classvisilib_1_1_helper_debug_visualisation-members.html  classvisilib_1_1_helper_debug_visualisation.html  classvisilib_1_1_helper_geometry_scene_reader-members.html  classvisilib_1_1_helper_geometry_scene_reader.html  classvisilib_1_1_helper_scoped_timer-members.html  classvisilib_1_1_helper_scoped_timer.html  classvisilib_1_1_helper_statistic_collector-members.html  classvisilib_1_1_helper_statistic_collector.html  classvisilib_1_1_helper_synthetic_mesh_builder-members.html  classvisilib_1_1_helper_synthetic_mesh_builder.html  classvisilib_1_1_helper_triangle_mesh-members.html  classvisilib_1_1_helper_triangle_mesh.html  classvisilib_1_1_helper_triangle_mesh_container-members.html  classvisilib_1_1_helper_triangle_mesh_container.html  (+190 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+17 more)
doc/latex/: classvisilib_1_1_geometry_occluder_set.tex  classvisilib_1_1_helper_triangle_mesh.tex  classvisilib_1_1_helper_triangle_mesh_container.tex  classvisilib_1_1_helper_visual_debugger.tex  classvisilib_1_1_silhouette.tex  classvisilib_1_1_silhouette_container.eps  classvisilib_1_1_silhouette_container.tex  classvisilib_1_1_silhouette_container_embree.eps  classvisilib_1_1_silhouette_container_embree.tex  classvisilib_1_1_silhouette_mesh_face.tex  classvisilib_1_1_silhouette_processor.tex  classvisilib_1_1_visibility_exact_query__.eps  classvisilib_1_1_visibility_exact_query__.tex  structvisilib_1_1_discrete_geometry_description.eps  structvisilib_1_1_discrete_geometry_description.tex  structvisilib_1_1_geometry_discrete_mesh_description.eps  structvisilib_1_1_geometry_discrete_mesh_description.tex  structvisilib_1_1_geometry_intersect_context_multi_hit.tex  structvisilib_1_1_geometry_ray_multi_hit.tex  structvisilib_1_1_geometry_triangle_mesh_description.eps  structvisilib_1_1_geometry_triangle_mesh_description.tex  structvisilib_1_1_intersect_context_multi_hit.tex  structvisilib_1_1_ray_multi_hit.tex  structvisilib_1_1_silhouette_1_1_hash.tex  structvisilib_1_1_silhouette_edge.tex  structvisilib_1_1_triangle_mesh_description.eps  structvisilib_1_1_triangle_mesh_description.tex  structvisilib_1_1_visibility_exact_query_configuration.tex  structvisilib_1_1_visibility_ray.tex  structvisilib_demo_1_1_demo_configuration.tex
test/: CMakeLists.txt
test/src/: test_definition.h  test_full.cpp  test_math.cpp  test_visibility.cpp
visilib/: CMakeLists.txt  geometry_aabbox.h  geometry_convex_hull.h  geometry_convex_polygon.h  geometry_mesh_description.h  geometry_occluder_set.h  geometry_position_type.h  geometry_ray.h  helper_debug_visualisation.h  helper_geometry_scene_reader.h  helper_statistic_collector.h  helper_synthetic_mesh_builder.h  helper_triangle_mesh.h  helper_triangle_mesh_container.h  helper_visual_debugger.h  math_arithmetic.h  math_combinatorial.h  math_geometry.h  math_gmp_float.h  math_gmp_rational.h  math_matrix_4.h  math_mpfr.h  math_plane_3.h  math_plucker_2.h  math_plucker_6.h  math_predicates.h  math_vector_2.h  math_vector_3.h  plucker_element.h  plucker_polyhedron.h  plucker_polytope.h  plucker_polytope_builder.h  plucker_polytope_complex.h  plucker_polytope_splitter.h  silhouette.h  silhouette_container.h  silhouette_container_embree.h  silhouette_mesh_face.h  silhouette_processor.h  visibility_aggressive_solver.h  (+8 more)
visilib/old/: plucker_polyhedron.h  plucker_polytope.h
